Made tags with dots in the name work as intended and assigned them to the parent and display name properly. Fixed folder boldness if any tags have children they are now bold. Wrapped circle color keys so you can deeply nest tags and still have colors.

--- a/app/style/index.scss
+++ b/app/style/index.scss
@@ -190,7 +190,7 @@ $tag-height: 26px;
         }
       }
 
-      &.level-1 {
+      &.parent {
         .title {
           font-weight: 600;
         }
